# ComfyUI-DeepSeek-JanusPro

./: JanusPro.py  README.md  pyproject.toml
.github/workflows/: publish.yml
janus/models/: modeling_vlm.py  projector.py
