[project]
name = "deepseek-januspro"
description = "ComfyUI-DeepSeek-JanusPro"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ZHO-ZHO-ZHO/ComfyUI-DeepSeek-JanusPro"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DeepSeek-JanusPro"
Icon = ""
